# Tilin-Audio-Visualizer

./: LICENSE  README.md
lib/: CMakeLists.txt
src/: main.c
